feat: 新增取得雜誌文章列表功能
